--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,21 @@
 @tailwind components;
 @tailwind utilities;
 
+:root {
+  --border: 217.2 32.6% 17.5%;
+  --input: 217.2 32.6% 17.5%;
+  --ring: 224.3 76.3% 48%;
+  --background: 210 40% 98%;
+  --foreground: 220 14% 96%;
+  --primary: 220 60% 50%;
+  --primary-foreground: 210 40% 98%;
+  --secondary: 220 14% 96%;
+  --secondary-foreground: 210 40% 98%;
+  --accent: 340 65% 47%;
+  --accent-foreground: 210 40% 98%;
+  --destructive: 0 62.8% 30.6%;
+  --destructive-foreground: 210 40% 98%;
+}
 
 @layer base {
   :root {
@@ -61,7 +76,10 @@
 }
 
 @layer base {
-  :root {
-    --radius: 0.5rem;
-  }
+* {
+  @apply border-border;
+ }
+ body {
+  @apply dark bg-background text-foreground;
+ }
 }
